[package]
name = "gl-capture"
version = "0.0.2"
edition = "2021"
description = "Capture screenshot in OpenGL"
documentation = "https://docs.rs/gl-capture"
keywords = ["gl", "egl", "opengl", "khronos"]
categories = ["game-development", "graphics", "multimedia", "rendering"]
repository = "https://github.com/vallentin/gl-capture"
license = "MIT"
readme = "README.md"

[dependencies]
gl = "0.14"

[dev-dependencies]
gl-headless = "0.2"
glfw = "0.51"
png = "0.17"
